# q100-variant-benchmark-paper

./: .Renviron  .gitignore  .lintr  .markdownlintignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CODEBASE_IMPROVEMENTS.md  IMPROVEMENT_PLAN.md  MIGRATION_EXECUTION_GUIDE.md  Makefile  README.md  README.qmd  READY_TO_EXECUTE.md  TODO.md  _book.yml  _quarto.yml  air.toml  build-site.sh  environment.yaml  full_migration.sh  header.html  index.qmd  pilot_migration.sh  pyproject.toml  q100-variant-benchmark.Rproj  r-reference.qmd  setup_flextable_migration.sh  styles.css
.claude/: ralph-loop.local.md  settings.local.json
.github/: AGENT.md  AGENTS.md  COPILOT_SETUP_VERIFICATION.md  copilot-instructions.md
.pixi/: config.toml
R/: bed_helpers.R  cache.R  data_loading.R  example_themed_analysis.R  plot_themes.R  schemas.R
analysis/: README.md  _notebook_setup.R  benchmark_difficult.qmd  benchmark_difficult_var.qmd  benchmark_exclusions.qmd  benchmark_interval_size_distributions.qmd  benchmark_unique_regions.qmd  benchmarkset-characterization.qmd  benchmarkset_characterization.qmd  external_evaluation.qmd  genomic_context_analysis.qmd  use_case_evaluation.qmd
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
config/: config.test_grch38_debug.yaml  config.yaml
docs/: BRANCH_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_SUGGESTIONS.md  PHASE4_VERIFICATION.md  analysis_refactoring_plan.md  api-reference.md  architecture.md  data-dictionary.md  data_dictionary.md  exclusions-pipeline-evaluation.md  gdtools-macos-fix.md  (+4 more)
(+204 files in other folders)
